--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
     <div class="container">
        <!-- Navbar brand -->
-        <a class="navbar-brand" href="http://iuqibogor.ac.id/" title="SMK AR-RAHMAH JASINGA">
+        <a class="navbar-brand" href="index.html" title="SMK AR-RAHMAH JASINGA">
           <img src="upload/logo/icon/2.png">
         </a>
       <!-- Collapse button -->
@@ -262,8 +262,8 @@
               </li>
              
               <li>
-                <h6 class="wow slideInLeft"><strong>7. Pengumuman seleksi penerimaan </strong></h6>
-                <p>Calon siswa melihat pengumuman diterima atau tidak di website IUQI.</p>
+                <h6 class="wow slideInLeft"><strong>7. Pengumuman penerimaan </strong></h6>
+                <p>Calon siswa melihat pengumuman diterima atau tidak di website PSB SMK Ar-Rahmah.</p>
               </li>
             </ul>
           </div>
@@ -333,7 +333,7 @@
                     <hr>
                     <p style="font-size: 12px; text-align: center;">saat ini perbankan syari'ah tengah berkembang di penjuru negri, dan menjadi peluang besar bagi bangsa indonesia untuk menjadi pusat perbankan syari'ah di dunia. karna indonesia merupakan negara muslim terbesar di dunia, dan jadilah bukti perjuangan ekonomi islam di indonesia dengan bergabung bersama kami</p>
                     <div style="text-align: center;">
-<h6 class="wow slideInLeft"><img border="none" height="250" src="upload/banner/SMK2.jpg" width="450"/></h6>
+<h6 class="wow slideInLeft"><img border="none" height="210" src="upload/banner/SMK2.jpg" width="320"/></h6>
                       
                       </div>
                     </a>
@@ -499,7 +499,7 @@
                 <div class="info_login"></div>
 
                 <div class="md-form mb-0">
-                  <form method="post" action="https://docs.google.com/forms/d/e/1FAIpQLSda5fHb9mL_kz6zl6s_XFNqGyruQ_MUbxGwyt7vfVGIXpr-kg/viewform?usp=sf_link">
+                  <form method="post" action="https://docs.google.com/forms/d/e/1FAIpQLSeniwswyW4AORrAYP8a2k_u7v3drBi4qmb1H4o308wxvy3W8w/viewform?usp=sf_link">
     <button type="submit">DAFTAR</button>
   </form>
           </div>
