--- a/berita.html
+++ b/berita.html
@@ -126,7 +126,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
     <div class="container">
        <!-- Navbar brand -->
-        <a class="navbar-brand" href="http://iuqibogor.ac.id/" title="SMK AR-RAHMAH JASINGA">
+        <a class="navbar-brand" href="index.html" title="SMK AR-RAHMAH JASINGA">
           <img src="upload/logo/icon/2.png">
         </a>
       <!-- Collapse button -->
