--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
     <div class="container">
        <!-- Navbar brand -->
-        <a class="navbar-brand" href="http://iuqibogor.ac.id/" title="SMK AR-RAHMAH JASINGA">
+        <a class="navbar-brand" href="index.html" title="SMK AR-RAHMAH JASINGA">
           <img src="upload/logo/icon/2.png">
         </a>
       <!-- Collapse button -->
@@ -221,7 +221,7 @@
                     <p><a href="tel:085717095220">085717095220</a></p>
                 </li>
                 <li><i class="fab fa-whatsapp mt-4 fa-2x"></i>
-                    <p><a href="https://wa.me/085817453258?text=Assalamualaikum%20IUQI" target="_blank">085817453258</a></p>
+                    <p><a href="https://wa.me/6285817453258?text=Assalamualaikum%20Official Ar-Rahmah" target="_blank">6285817453258</a></p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
