--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <div class="modal-content">
       <!--Header-->
       <div class="modal-header">
-        <p class="heading lead">SELAMAT DATANG ! SILAHKAN KLIK LINK DIBAWAH INI</p>
+        <p class="heading lead">SELAMAT DATANG ! </p>
 
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true" class="white-text">&times;</span>
@@ -492,16 +492,14 @@
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#login" role="tab" aria-controls="home"
-              aria-selected="true"><i class="fa fa-sign-in-alt"></i> DAFTAR SMK AR-RAHMAH</a>
+              aria-selected="true"><i class="fa fa-sign-in-alt"></i> DAFTAR SMK AR-RAHMAH TAHUN AJARAN 2020-2021</a>
           </li>
         </ul>
                 
                 <div class="info_login"></div>
 
-                <div class="md-form mb-0">
-                  <form method="post" action="https://docs.google.com/forms/d/e/1FAIpQLSeniwswyW4AORrAYP8a2k_u7v3drBi4qmb1H4o308wxvy3W8w/viewform?usp=sf_link">
-    <button type="submit">DAFTAR</button>
-  </form>
+                <div class="nav-link waves-effect waves-light" 
+		     href="https://drive.google.com/file/d/1DR8X-Pcxsxb56KfmmlSB56iF7g-DNwEV/view?usp=sharing" target="_blank">FORMULIR PENDAFTARAN
           </div>
 
       <!--Footer-->
