--- a/home.html
+++ b/home.html
@@ -499,10 +499,9 @@
                 
                 <div class="info_login"></div>
 
-                <div class="md-form mb-0">
-                  <form method="post" action="https://docs.google.com/forms/d/e/1FAIpQLSeniwswyW4AORrAYP8a2k_u7v3drBi4qmb1H4o308wxvy3W8w/viewform?usp=sf_link">
-    <button type="submit">DAFTAR</button>
-  </form>
+                <div class="nav-link waves-effect waves-light"
+		     href="https://drive.google.com/file/d/1DR8X-Pcxsxb56KfmmlSB56iF7g-DNwEV/view?usp=sharing" target="_blank">FORMULIR PENDAFTARAN">
+                  
           </div>
 
       <!--Footer-->
