--- a/index.html
+++ b/index.html
@@ -498,9 +498,10 @@
                 
                 <div class="info_login"></div>
 
-                <div class="nav-link waves-effect waves-light" 
-		     href="https://drive.google.com/file/d/1DR8X-Pcxsxb56KfmmlSB56iF7g-DNwEV/view?usp=sharing" target="_blank">FORMULIR PENDAFTARAN
-          </div>
+                <a class="nav-link waves-effect waves-light"
+		     href="https://drive.google.com/file/d/1DR8X-Pcxsxb56KfmmlSB56iF7g-DNwEV/view?usp=sharing" target="_blank"><button type="submit">FORMULIR PENDAFTARAN">
+                  
+          </a>
 
       <!--Footer-->
       <!--
