--- a/home.html
+++ b/home.html
@@ -499,7 +499,7 @@
 
   <div class="info_login"></div>
 
-                <a class="nav-link waves-effect waves-light" align="center"/>
+                <a class="nav-link waves-effect waves-light" align="center"
 		     href="https://docs.google.com/forms/d/e/1FAIpQLSeniwswyW4AORrAYP8a2k_u7v3drBi4qmb1H4o308wxvy3W8w/viewform?usp=sf_link" target="_blank"><button type="submit">FORMULIR PENDAFTARAN
                   
           </a>
