--- a/home.html
+++ b/home.html
@@ -493,7 +493,7 @@
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#login" role="tab" aria-controls="home"
-              aria-selected="true"><i class="fa fa-sign-in-alt"></i> DAFTAR SMK AR-RAHMAH TAHUN AJARAN 2020-2021</a>
+              aria-selected="true"><i class="fa fa-sign-in-alt"></i> </a>
           </li>
         </ul>
 
