--- a/berita.html
+++ b/berita.html
@@ -203,10 +203,10 @@
 
   <div style="text-align: center;">
 <h6 class="wow slideInLeft">
-  <img border="none" height="200" href="upload/Profil/masjid.jpeg" width="290"/>
-<img border="none" height="200" href="upload/Profil/gedung.jpeg" width="290"/>
-<img border="none" height="200" href="upload/Profil/guru.jpeg" width="290"/>
-<img border="none" height="200" href="upload/Profil/pisah.jpeg" width="290"/></h6>
+  <img border="none" src="upload/Profil/masjid.jpeg" height="200" width="290"/>
+<img border="none" src="upload/Profil/gedung.jpeg"height="200" width="290"/>
+<img border="none" src="upload/Profil/guru.jpeg" height="200" width="290"/>
+<img border="none" src="upload/Profil/pisah.jpeg" height="200" width="290"/></h6>
                       
                       </div>
 <div style="text-align: center;">
