--- a/home.html
+++ b/home.html
@@ -156,9 +156,21 @@
             </a>
           </li>
            <li class="nav-item">
-            <a class="nav-link" href="https://drive.google.com/file/d/1DR8X-Pcxsxb56KfmmlSB56iF7g-DNwEV/view?usp=sharing" target="_blank">FORMULIR OFLINE
+            <a class="nav-link" href="https://smkarrahmah195.github.io/PAT2020/" target="_blank">UJIAN ONLINE
             </a>
           </li>
+	 <li class="nav-item ">
+            <a class="nav-link" href="https://drive.google.com/drive/folders/1fQIFF4hn5DbnNJepAuIFkxC06ksVlZPY?usp=sharing">KELAS X
+            </a>
+	  </li>
+		<li class="nav-item ">
+            <a class="nav-link" href="https://drive.google.com/drive/folders/1z3iA1v37ZiVdoF7XrTJuKzO8HRFdvS-M?usp=sharing">KELAS XI
+            </a>
+	  </li>
+		<li class="nav-item ">
+            <a class="nav-link" href="https://drive.google.com/drive/folders/1z3iA1v37ZiVdoF7XrTJuKzO8HRFdvS-M?usp=sharing">KELAS XII
+            </a>
+	  </li>
         </ul>
           
         <!-- Links -->
@@ -312,7 +324,7 @@
           </div>
         </div>
                       <break>
-              <!--Grid column-->
+             <!--Grid column-->
               <!--Card Light-->              
               <div class="col-lg-15 col-md-15 mb-12 wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.4s;">
                 <!--Card Light-->
@@ -334,7 +346,7 @@
                     <hr>
                     <p style="font-size: 12px; text-align: center;">saat ini perbankan syari'ah tengah berkembang di penjuru negri, dan menjadi peluang besar bagi bangsa indonesia untuk menjadi pusat perbankan syari'ah di dunia. karna indonesia merupakan negara muslim terbesar di dunia, dan jadilah bukti perjuangan ekonomi islam di indonesia dengan bergabung bersama kami</p>
                     <div style="text-align: center;">
-<h6 class="wow slideInLeft"><img border="none" height="210" src="upload/banner/SMK2.jpg" width="320"/></h6>
+<h6 class="wow slideInLeft"><img border="none" height="170" src="upload/banner/SMK2.jpg" width="290"/></h6>
                       
                       </div>
                     </a>
