--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
             </a>
           </li>
            <li class="nav-item">
-            <a class="nav-link" href="https://smkarrahmah195.github.io/PAT2020/go.html" target="_blank">UJIAN ONLINE
+            <a class="nav-link" href="go.html" target="_blank">UJIAN ONLINE
             </a>
           </li>
 	 <li class="nav-item ">
