--- a/berita.html
+++ b/berita.html
@@ -212,7 +212,63 @@
  <body>
 
   <!--Main layout-->
-
+</nav> 
+				</div>
+			</div>	<div class="col-md-12" style="background:#f5f5f5;">
+		<div class="foxukuran90" style="background:#fff; margin:20px auto; border:1px solid #ccc;">
+			<div class="headerimg">
+				<div class="col-md-12" style="background:#036A7F; margin-bottom:20px;">
+					<div class="foxukuran90" style="padding:10px 0px;">
+						<div class="col-md-12">
+							<img src="lib/template_fox_go/mendolasin/template_fox_SMKN1PASURUAN/img/header/bursakerja.png" style="width:150px; float:left; padding-right:20px;">
+							<h4 class="fontsize" style="font-family:calibri;text-align:left; font-weight:Bold; text-transform: uppercase; padding:20px 20px; margin:0px; color:#fff;">Struktur Organisasi BKK</h4>
+						</div>
+						<div style="clear:both;"></div>
+					</div>
+				</div>
+			</div>
+			<div class="deskripsi" style="width:90%; margin:30px auto; color:#3b3b3b;">
+				<h5><b>Halaman Struktur Organisasi </b></h5>
+				<h6>berisi informasi Struktur Organisasi SMK AR-RAHMAH JASINGA.</h6>
+				<div class="tempattable" style="width:100%; overflow-x:scroll;">
+					<table border="1" class="table table-striped table-bordered" style="font-size:12px; color:#3b3b3b;"> 
+						<tr  style="background:#036A7F; color:#fff; font-weight:bold;">
+							<td colspan="2"style="text-align:left; font-weight:bold;">STRUKTUR ORGANISASI<br>SMK AR-RAHMAH JASINGA</td>
+						</tr>
+						<tr>
+							<td style="width:25%;" ><b>PELINDUNG</b></td>
+							<td>II</td>
+						</tr>
+						<tr>
+							<td><b>KETUA YAYASAN</b></td>
+							<td>KHAERUDIN, A.Ag., MM.</td>
+						</tr>
+						<tr>
+							<td><b>KEPALA SEKOLAH</b></td>
+							<td>KMAMAT, S.Pd.,MM.</td>
+						</tr>
+						<tr>
+							<td><b>WAKIL KEPALA SEKOLAH</b></td>
+							<td>MAHMUDIN, S.Pd.</td>
+						</tr>
+							<td><b>BENDAHARA</b></td>
+							<td>MAHPUDOTUL HASANAH</td>
+						</tr>
+							<td><b>TATA USAHA</b></td>
+							<td>1. IYUS, S.Pd<BR>2. UBAEDILAH</td>
+						</tr>
+							<td><b>AKURIKULUM</b></td>
+							<td>MAHMUDIN, S.Pd.</td>
+						</tr>
+							<td><b>KESISWAAN</b></td>
+							<td>MUMUS MUSTOFA</td>
+						</tr>
+							
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
   <div style="text-align: center;">
 <h6 class="wow slideInLeft">
   <img border="none" src="upload/Profil/masjid.jpeg" height="200" width="290"/>
