--- a/berita.html
+++ b/berita.html
@@ -220,8 +220,8 @@
 				<div class="col-md-12" style="background:#036A7F; margin-bottom:20px;">
 					<div class="foxukuran90" style="padding:10px 0px;">
 						<div class="col-md-12">
-							<img src="lib/template_fox_go/mendolasin/template_fox_SMKN1PASURUAN/img/header/bursakerja.png" style="width:150px; float:left; padding-right:20px;">
-							<h4 class="fontsize" style="font-family:calibri;text-align:left; font-weight:Bold; text-transform: uppercase; padding:20px 20px; margin:0px; color:#fff;">Struktur Organisasi BKK</h4>
+							
+							<h4 class="fontsize" style="font-family:calibri;text-align:center; font-weight:Bold; text-transform: uppercase; padding:20px 20px; margin:0px; color:#fff;">STRUKTUR ORGANISASI SEKOLAH</h4>
 						</div>
 						<div style="clear:both;"></div>
 					</div>
@@ -233,7 +233,7 @@
 				<div class="tempattable" style="width:100%; overflow-x:scroll;">
 					<table border="1" class="table table-striped table-bordered" style="font-size:12px; color:#3b3b3b;"> 
 						<tr  style="background:#036A7F; color:#fff; font-weight:bold;">
-							<td colspan="2"style="text-align:left; font-weight:bold;">STRUKTUR ORGANISASI<br>SMK AR-RAHMAH JASINGA</td>
+							<td colspan="2"style="text-align:center; font-weight:bold;">STRUKTUR ORGANISASI<br>SMK AR-RAHMAH JASINGA</td>
 						</tr>
 						<tr>
 							<td style="width:25%;" ><b>PELINDUNG</b></td>
@@ -257,7 +257,7 @@
 							<td><b>TATA USAHA</b></td>
 							<td>1. IYUS, S.Pd<BR>2. UBAEDILAH</td>
 						</tr>
-							<td><b>AKURIKULUM</b></td>
+							<td><b>KURIKULUM</b></td>
 							<td>MAHMUDIN, S.Pd.</td>
 						</tr>
 							<td><b>KESISWAAN</b></td>
@@ -271,10 +271,9 @@
 	</div>
   <div style="text-align: center;">
 <h6 class="wow slideInLeft">
-  <img border="none" src="upload/Profil/masjid.jpeg" height="200" width="290"/>
-<img border="none" src="upload/Profil/gedung.jpeg"height="200" width="290"/>
-<img border="none" src="upload/Profil/guru.jpeg" height="200" width="290"/>
-<img border="none" src="upload/Profil/pisah.jpeg" height="200" width="290"/></h6>
+  <img border="none" src="https://www.facebook.com/photo?fbid=254895462330374&set=a.134209861065602" height="200" width="290"/>
+<img border="none" src="https://www.facebook.com/photo?fbid=254897242330196&set=pcb.254897388996848"height="200" width="290"/>
+</h6>
                       
                       </div>
 <div style="text-align: center;">
