--- a/berita.html
+++ b/berita.html
@@ -228,8 +228,7 @@
 				</div>
 			</div>
 			<div class="deskripsi" style="width:90%; margin:30px auto; color:#3b3b3b;">
-				<h5><b>Halaman Struktur Organisasi </b></h5>
-				<h6>berisi informasi Struktur Organisasi SMK AR-RAHMAH JASINGA.</h6>
+				
 				<div class="tempattable" style="width:100%; overflow-x:scroll;">
 					<table border="1" class="table table-striped table-bordered" style="font-size:12px; color:#3b3b3b;"> 
 						<tr  style="background:#036A7F; color:#fff; font-weight:bold;">
@@ -245,7 +244,7 @@
 						</tr>
 						<tr>
 							<td><b>KEPALA SEKOLAH</b></td>
-							<td>KMAMAT, S.Pd.,MM.</td>
+							<td>MAMAT, S.Pd.,MM.</td>
 						</tr>
 						<tr>
 							<td><b>WAKIL KEPALA SEKOLAH</b></td>
