--- a/berita.html
+++ b/berita.html
@@ -270,8 +270,7 @@
 	</div>
   <div style="text-align: center;">
 <h6 class="wow slideInLeft">
-  <img border="none" src="https://www.facebook.com/photo?fbid=254895462330374&set=a.134209861065602" height="200" width="290"/>
-<img border="none" src="https://www.facebook.com/photo?fbid=254897242330196&set=pcb.254897388996848"height="200" width="290"/>
+  <iframe src="https://youtu.be/KmuyLuoaAH8" height="500px" width="1000px"></iframe>
 </h6>
                       
                       </div>
