--- a/berita.html
+++ b/berita.html
@@ -270,7 +270,7 @@
 	</div>
  
      
-                <div class="col-12" text-align: center;>
+               <div style="text-align: center;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/KmuyLuoaAH8?start=28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
 </div>
              
