--- a/home.html
+++ b/home.html
@@ -160,15 +160,15 @@
             </a>
           </li>
 	 <li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/drive/folders/1fQIFF4hn5DbnNJepAuIFkxC06ksVlZPY?usp=sharing">KELAS X
+            <a class="nav-link" href="https://drive.google.com/folderview?id=1MGlK7OzaEdczEW8KlogRu23Eo99_VYGT">KELAS X
             </a>
 	  </li>
 		<li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/drive/folders/1z3iA1v37ZiVdoF7XrTJuKzO8HRFdvS-M?usp=sharing">KELAS XI
+            <a class="nav-link" href="https://drive.google.com/folderview?id=1MNO_qgqSWiuhDztcyCrJbSemHgyZxqP5">KELAS XI
             </a>
 	  </li>
 		<li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/drive/folders/1arBZrFwAFUbOHv3N0lnCuVqxLP6yyVUb?usp=sharing">KELAS XII
+            <a class="nav-link" href="https://drive.google.com/folderview?id=1MNR_vcaDp5DwffJrnXxGczGRp8ObtANf">KELAS XII
             </a>
 	  </li>
         </ul>
