--- a/berita.html
+++ b/berita.html
@@ -9,11 +9,11 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     	<meta name="theme-color" content="#3fa044">
-				<meta name="description" content="Penerimaan siswa baru SMK AR-RAHMAH JASINGA">
+				<meta name="description" content="DAFTAR ONLINE SMK AR-RAHMAH JASINGA">
 		<meta name="author" content="Ubaedilah -ubaedilah.0203@gmail.com">
 		<meta name="keywords" content="Penerimaan siswa baru SMK AR-RAHMAH JASINGA">
 		<meta name="robots" content="all">
-		<title>Penerimaan siswa baru SMK AR-RAHMAH JASINGA</title>		
+		<title>Penerimaan siswa Baru - SMK AR-RAHMAH JASINGA</title>		
 	    <!-- Bootstrap Core CSS -->
 	    <link rel="stylesheet" href="../use.fontawesome.com/releases/v5.8.2/css/all.css">
 	    <link rel="stylesheet" href="theme/iuqi/css/bootstrap.min.css">
@@ -49,7 +49,7 @@
 
 	      @media (min-width: 800px) and (max-width: 850px) {
 	              .navbar:not(.top-nav-collapse) {
-	                  background: #1C2331!important;
+	                  background: #39b6c4!important;
 	              }
 	          }
 
@@ -130,7 +130,7 @@
           <img src="upload/logo/icon/2.png">
         </a>
       <!-- Collapse button -->
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
         aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -159,19 +159,9 @@
             <a class="nav-link" href="go.html" target="_blank">UJIAN ONLINE
             </a>
           </li>
-	  <li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/folderview?id=1MGlK7OzaEdczEW8KlogRu23Eo99_VYGT">KELAS X
-            </a>
-	  </li>
-		<li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/folderview?id=1MNO_qgqSWiuhDztcyCrJbSemHgyZxqP5">KELAS XI
-            </a>
-	  </li>
-		<li class="nav-item ">
-            <a class="nav-link" href="https://drive.google.com/folderview?id=1MNR_vcaDp5DwffJrnXxGczGRp8ObtANf">KELAS XII
-            </a>
-	  </li>
+	 
         </ul>
+          
           
         <!-- Links -->
 
