--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
   <div class="info_login"></div>
 
                 <a class="nav-link waves-effect waves-light" align="center"
-		     href="https://docs.google.com/forms/d/e/1FAIpQLSeniwswyW4AORrAYP8a2k_u7v3drBi4qmb1H4o308wxvy3W8w/viewform?usp=sf_link" target="_blank"><button type="submit">FORMULIR PENDAFTARAN
+		     href="https://forms.gle/QUkq1NjKEEs9HweY7" target="_blank"><button type="submit">FORMULIR PENDAFTARAN
                   
           </a>
                
